[package]
name = "vwmetrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "0.14.23", features = [
    "server",
    "http1",
    "runtime",
    "client"
] }
once_cell = "1.16.0"
rusqlite = "0.28.0"
tokio = { version = "1.22.0", features = ["rt", "sync"] }

[profile.release]
opt-level = "z"
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true
