[package]
name = "vwmetrics"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Turn your Vaultwarden database into Prometheus metrics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.29", features = ["derive", "cargo", "env"] }
hyper = { version = "0.14.23", features = ["server", "http1", "runtime"] }
once_cell = "1.16.0"
tokio = { version = "1.22.0", features = [
    "rt",
    "macros",
    "sync",
    "parking_lot"
] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "any",
    "sqlite",
    "postgres",
    "mysql",
], default-features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["parking_lot", "once_cell", "tracing", "env-filter"] }

[profile.release]
opt-level = "z"
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true
