[package]
name = "vwmetrics"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Turn your Vaultwarden database into Prometheus metrics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.5.42", features = ["derive", "cargo", "env"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
once_cell = "1.21.3"
tokio = { version = "1.47.0", features = [
    "rt",
    "macros",
    "sync",
    "parking_lot",
] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "any",
    "sqlite",
    "postgres",
    "mysql",
    "tls-rustls",
], default-features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "parking_lot",
    "once_cell",
    "tracing",
    "env-filter",
] }
pin-project-lite = "0.2.16"
http-body-util = "0.1.3"
anyhow = "1.0.98"

[profile.release]
opt-level = "z"
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true
